Updating gradle build preferences